# GH-License

./: .gitignore  .pyirc  .pypirc  MANIFEST.in  README  README.md  aklife97-gh-license-report  conftest.py  gh-license.py  install.sh  my-report.txt  pyproject.toml  pytest.ini  pyvenv.cfg  requirements.txt  requirements_dev.txt  requirements_venv.txt  run.py  setup.cfg  setup.py  upload.sh
.github/workflows/: test.yml
.sisyphus/: boulder.json
.sisyphus/plans/: gh-license-remaining-issues.md
ghlicense/: cmd.py  functions.py  licenses.json  licenses.txt  py.typed  repobase.py
ghlicense/cli/: __init__.py  commands.py  parser.py
ghlicense/config/: __init__.py  storage.py
ghlicense/license/: __init__.py  manager.py
ghlicense/providers/: __init__.py  bitbucket.py  github.py  gitlab.py
ghlicense/scanner/: __init__.py  repo_scan.py
ghlicense/utils/: __init__.py  retry.py
setup/: setup_hook.py
setup/hooks/: pre-commit  pre-commit.py
setup/hooks/pre-commit.d/: 1-gh_license
tests/: conftest.py  test_cli.py  test_cmd.py  test_config.py  test_functions.py  test_providers.py  test_repobase.py  test_retry.py  test_scanner.py
