[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gh-license"
version = "0.4.0"
authors = [
    {name = "Mte90", email = "mte90net@gmail.com"}
]
description = "Scan github, bitbucket or other providers repositories for missing license files and add them"
readme = "README.md"
license = {text = "GPLv3"}
requires-python = ">=3.10"
dependencies = [
    "pygithub>=1.5.0",
    "bitbucket-api>=0.5.0",
    "python-gitlab>=3.1.5.0",
]
keywords = ["github", "bitbucket", "gitlab", "license", "scanner"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.urls]
Homepage = "https://github.com/Mte90/GH-License"
Download = "https://github.com/Mte90/GH-License/tarball/0.4.0"

[project.scripts]
gh-license = "ghlicense.cmd:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-asyncio>=0.21.0",
]

[tool.setuptools]
packages = ["ghlicense"]

[tool.setuptools.package-data]
ghlicense = ["*.json"]
